--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ ul li.checked{
 }
 
 ul li.checked::before{
-    background-image: url(/images/checked.PNG);
+    background-image: url(/images/checked.png);
 }
 
 ul li span{
