--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ ul li::before{
     height: 28px;
     width: 28px;
     border-radius: 50%;
-    background-image: url(/images/unchecked.PNG);
+    background-image: url(/images/unchecked.png);
     background-size: cover;
     background-position: center;
     top: 12px;
